# MailTask

./: .travis.yml  CMakeLists.txt  README.md
project/: client_builder.sh  server_builder.sh  Запуск клиента.md  Запуск сервер.md
project/include/: IZ2_STATIC.h  libIZ2_dymamic.h
project/include/client/: ui.h
project/include/server/: server.h
project/include/server/room/: constexp.h  room.h
project/include/server/session/: constexp.h  session.h
project/src/: IZ2_STATIC.c  libIZ2_dymamic.c  main.c  main.cpp  ui.cpp
project/src/client/: CMakeLists.txt  main.cpp  ui.cpp
project/src/server/: CMakeLists.txt  main.cpp  server.cpp
project/src/server/room/: room.cpp
project/src/server/session/: session.cpp
project/tests/: CMakeLists.txt  clientForTest.h  test.cpp
